# my-ansible-dashboard

./: .gitignore  MANIFEST.in  README.md  noxfile.py  requirements.txt  setup.cfg
doc/: ChangeLog.md
etc/: myansi-sample.conf
i18n/: zh_CN.po
install/: Dockerfile  build.py
myansi/: hooks.py  views.py
myansi/cmd/: ctl.py
myansi/common/: conf.py  constants.py  context.py  i18n.py  player.py  utils.py
myansi/db/: api.py
myansi/static/: dashboard.js  i18n.js
myansi/static/myansi/: api.js  dialogs.js  lib.js
myansi/templates/: dashboard.html  requires.html
myansi/templates/extensions/: appBar.html  command.html  overview.html
