[metadata]
name = myansi
summary = Vuetify Ansible Web
author = fjboy
author_email = 2535463841@qq.com
home_page = https://github.com/fjboy/vuetify-stack-board

[global]
setup-hooks =
    myansi.hooks.setup_hook

[files]
packages =
    myansi
    myansi.templates
    myansi.static

data_files =
    /etc/myansi = etc/myansi-sample.conf

[entry_points]
console_scripts =
    myansi = myansi.cmd.ctl:main
